/*
 * $Id: ChangeLog,v 1.327 2007-03-21 02:32:51 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-03-20 20:42 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_xbrowse.prg
    * Fixed default workarea when it's not defined.

2007-03-20 15:53 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    * fixed colum count in excel and htmlprint

2007-03-19 14:38 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c
  * source/h_controlmisc.prg
  * source/h_menu.prg
  * source/h_tab.prg
    * Fixed some bmp-related display issues.

2007-03-14 08:16 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_print.prg
    * ::End() OLE method calls must be invoked only for Harbour.
    * Moved oPrintExcel and oPrintHoja to class' properties.

2007-03-10 15:32 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_window.ch
    * Blank space added on LOAD WINDOW definition.
  * source/h_button.prg
    ! Fixed text/image button type detection.
  * source/h_grid.prg
    ! Fixed some ::Value issues for TMultiGrid.
    * Modified ::ToExcel() implementation.
  * source/h_tree.prg
    * Fixed ItemId usage for ::AddItem().

2007-03-08 13:32 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed bug pressing DOWN key on MULTIGRID.
    + ::FirstSelectedItem() method added.
  * source/h_button.prg
    ! Fixed not caption shown (button is defined for IMAGE) when
      control is created with TButton():Define() without parameters.
    + ::DefineImage() method added. It creates control for IMAGE for
      TButton():DefineImage() syntax.

2007-03-04 13:32 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_xbrowse.prg
    ! Included missing ThisCell* info when ON EDITCELL is called.
  * doc/classes.txt
  * include/i_altsyntax.ch