@@ -864,8 +864,7 @@ ENDCLASS
 
 CLASS TMENUNOTIFY FROM TMENU
    METHOD DEFINE
-   METHOD RELEASE     BLOCK { |SELF| ::PARENT:NOTIFYMENUHANDLE := 0, ::SUPER:RELEASE() }
-ENDCLASS
+   METHOD RELEASE     BLOCK { |SELF| ::PARENT:NOTIFYMENU := nil, ::SUPER:RELEASE() } ENDCLASS
 
 CLASS TMENUDROPDOWN FROM TMENU
    METHOD DEFINE
@@ -1165,7 +1164,7 @@ CLASS TFORM FROM TWINDOW
    DATA SPLITCHILDLIST INIT {}    // INTERNAL WINDOWS.
 
    DATA NOTIFYICONLEFTCLICK   INIT NIL
-   DATA NOTIFYMENUHANDLE      INIT 0
+   DATA NOTIFYMENU            INIT NIL
    DATA CNOTIFYICONNAME       INIT ""
    DATA CNOTIFYICONTOOLTIP    INIT ""
    METHOD NOTIFYICONNAME      SETGET
